--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,12 @@
     "require": {
         "swiftmailer/swiftmailer": "^6.0",
         "nesbot/carbon": "^2.48"
+    },
+    "autoload": {
+        "classmap": ["classes/", "main/"],
+        "files": ["config/database.php"],
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
